--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -13,7 +13,7 @@ metadata:
     alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
     alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "10"
     alb.ingress.kubernetes.io/healthy-threshold-count: "2"
-    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
+    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTPS"
   name: ecsdemo-nodejs
   namespace: ecsdemo-nodejs 
 spec:
